--- a/docker/desafio2/docker-compose.yaml
+++ b/docker/desafio2/docker-compose.yaml
@@ -9,10 +9,15 @@ services:
     tty: true
     volumes:
       - ./mysql/init.sql:/data/application/init.sql
-#     - ./mysql:/var/lib/mysql
+      - ./mysql/data:/var/lib/mysql
     environment:
      - MYSQL_DATABASE=nodedb
      - MYSQL_ROOT_PASSWORD=root
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot"]
+      interval: 5s
+      timeout: 10s
+      retries: 3
     networks:
      - node-network
 
@@ -29,7 +34,8 @@ services:
     ports:
       - "8081:3000"
     depends_on:
-     - db
+      db:
+        condition: service_healthy
 
   nginx:
     build:
