--- a/docker/desafio2/docker-compose.yaml
+++ b/docker/desafio2/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     tty: true
     volumes:
       - ./mysql/init.sql:/data/application/init.sql
-      - ./mysql/data:/var/lib/mysql
+  #    - ./mysql/data:/var/lib/mysql
     environment:
      - MYSQL_DATABASE=nodedb
      - MYSQL_ROOT_PASSWORD=root
@@ -29,6 +29,8 @@ services:
     container_name: web1
     restart: on-failure
     tty: true
+    volumes:
+     - ./web1:/usr/src/app
     networks:
       - node-network
     ports:
